<resources>
    <string name="app_name">Project</string>
    <string name="add">Add</string>
    <string name="tripBtn">Trips</string>
    <string name="emptyList">No place to go</string>
    <string name="settings">Settings</string>
    <string name="enable_music">Enable Background Music</string>
    <string name="music_preference">music_preference</string>
    <string name="change_photo">Change Photo</string>
    <string name="title_hint">Title</string>
    <string name="description_hint">Description</string>
    <string name="date_hint">Date</string>
    <string name="pick">Pick</string>
    <string name="time_hint">Time (Optional)</string>
    <string name="address_hint">Address</string>
    <string name="phone_hint">Phone (Optional)</string>
    <string name="visited">Visited</string>
    <string name="save_place">Save Place</string>
    <string name="update_place">Update Place</string>
    <string name="title_mandatory">Title is mandatory</string>
    <string name="visited_status">Visited</string>
    <string name="not_visited_status">Not Visited</string>
    <string name="city_hint">City</string>
    <string name="start_date_hint">Start Date</string>
    <string name="end_date_hint">End Date</string>
    <string name="save_trip">Save Trip</string>
    <string name="update_trip">Update Trip</string>
    <string name="edit_trip">Edit Trip</string>
    <string name="add_trip">Add Trip</string>
    <string name="trip_locked">Trip information is locked because it contains places.</string>
    <string name="fill_all_fields">Please fill all fields</string>
    <string name="trip_added">Trip added</string>
    <string name="trip_updated">Trip updated</string>
    <string name="trip_deleted">Trip deleted</string>
    <string name="delete">Delete</string>
    <string name="empty_trips">No trips found. Please add one</string>
    <string name="to">to</string>
    <string name="title_activity_trip_display">My Trips</string>
    <string name="title_activity_mod_place">Modify Place</string>
    <string name="title_activity_place_display">Places List</string>
    <string name="title_activity_mod_trip">Modify Trip</string>
    <string name="title_activity_settings">Settings</string>
    <string name="error_invalid_dates">Start date must be before or equal to end date</string>
    <string name="error_mandatory_fields_place">Title, description, date and address are mandatory</string>
    <string name="error_invalid_phone">Invalid phone number</string>
    <string name="error_date_outside_trip">Place date must be within the trip period</string>
    <string name="notification_preference">Notification Reminder</string>
    <string name="two_days_before">2 days before</string>
    <string name="one_week_before">1 week before</string>
    <string name="trip_reminder_title">Trip Reminder</string>
    <string name="trip_reminder_text">Your trip to %s is starting soon!</string>
</resources>