<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        tools:context=".ModPlace">

        <ImageView
            android:id="@+id/ivPlacePhoto"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginBottom="8dp"
            android:scaleType="centerCrop"
            android:src="@android:drawable/ic_menu_gallery"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnPickPhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_photo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivPlacePhoto" />

        <EditText
            android:id="@+id/etTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/title_hint"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnPickPhoto" />

        <EditText
            android:id="@+id/etDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/description_hint"
            android:inputType="textMultiLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etTitle" />

        <EditText
            android:id="@+id/etDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/date_hint"
            android:inputType="date"
            android:focusable="false"
            app:layout_constraintEnd_toStartOf="@+id/btnPickDate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etDescription" />

        <Button
            android:id="@+id/btnPickDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pick"
            app:layout_constraintBottom_toBottomOf="@+id/etDate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/etDate" />

        <EditText
            android:id="@+id/etTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/time_hint"
            android:inputType="time"
            android:focusable="false"
            app:layout_constraintEnd_toStartOf="@+id/btnPickTime"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etDate" />

        <Button
            android:id="@+id/btnPickTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pick"
            app:layout_constraintBottom_toBottomOf="@+id/etTime"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/etTime" />

        <EditText
            android:id="@+id/etAddress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/address_hint"
            android:inputType="textPostalAddress"
            app:layout_constraintEnd_toStartOf="@+id/btnShowMap"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etTime" />

        <ImageButton
            android:id="@+id/btnShowMap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_dialog_map"
            app:layout_constraintBottom_toBottomOf="@+id/etAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/etAddress" />

        <EditText
            android:id="@+id/etPhone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/phone_hint"
            android:inputType="phone"
            app:layout_constraintEnd_toStartOf="@+id/btnCall"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etAddress" />

        <ImageButton
            android:id="@+id/btnCall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_menu_call"
            app:layout_constraintBottom_toBottomOf="@+id/etPhone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/etPhone" />

        <CheckBox
            android:id="@+id/cbVisited"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/visited"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etPhone" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/save_place"
            app:layout_constraintTop_toBottomOf="@id/cbVisited" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>