<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ModTrip">

    <EditText
        android:id="@+id/etCity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/city_hint"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etStartDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/start_date_hint"
        android:inputType="date"
        android:focusable="false"
        app:layout_constraintEnd_toStartOf="@+id/btnPickStartDate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etCity" />

    <Button
        android:id="@+id/btnPickStartDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pick"
        app:layout_constraintBottom_toBottomOf="@+id/etStartDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/etStartDate" />

    <EditText
        android:id="@+id/etEndDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/end_date_hint"
        android:inputType="date"
        android:focusable="false"
        app:layout_constraintEnd_toStartOf="@+id/btnPickEndDate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etStartDate" />

    <Button
        android:id="@+id/btnPickEndDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pick"
        app:layout_constraintBottom_toBottomOf="@+id/etEndDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/etEndDate" />

    <Button
        android:id="@+id/btnSaveTrip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/save_trip"
        app:layout_constraintTop_toBottomOf="@id/etEndDate" />

</androidx.constraintlayout.widget.ConstraintLayout>